--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.6.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+    //implement picasso
+    implementation 'com.squareup.picasso:picasso:2.8'
+    //implement imageCircleView
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
