--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -10,17 +11,18 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Foody_App"
-        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
         <activity
             android:name=".activities.SuaMonAnActivity"
-            android:exported="false" />
+            android:exported="true">
+        </activity>
         <activity
             android:name=".activities.ThongTinNhaHangActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".activities.ThemMonAnActivity"
             android:exported="false" />
@@ -29,10 +31,10 @@
             android:exported="false" />
         <activity
             android:name=".activities.XacNhanDonHangActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".activities.DoiThongTinTKActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".activities.DoiMatKhauActivity"
             android:exported="false" />
@@ -62,7 +64,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
